--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:compat="http://schemas.android.com/tools">
 <item
     android:id="@+id/logout"
     android:title="@string/logout"
     app:showAsAction="never">
 
 </item>
+
+    <item
+        android:id="@+id/syncData"
+        android:title="@string/sync"
+        android:icon="@drawable/ic_sync_white_24dp"
+        compat:actionViewClass="android.widget.ImageView"
+        app:showAsAction="always" />
+
 </menu>
